# pytorch-lightning-template

./: .gitignore  LICENSE  README.md  config.py  data_module.py  docker-compose.yml  main.py  module.py  pyproject.toml  requirements.txt  train.py  tune.py
conf/: common.yaml  config.yaml  data_module.yaml  logger.yaml  module.yaml  trainer.yaml
conf/callbacks/: checkpoint.yaml  early_stop.yaml
conf/lr_scheduler/: cosine_annealing.yaml  none.yaml  one_cycle_lr.yaml  step_lr.yaml
conf/model/: base.yaml
conf/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
custom/: dataset.py  model.py
helper/: loss.py  lr_scheduler.py
