[tool.poetry]
name = "pytorch lightning template"
version = "0.1.1"
description = ""
authors = ["sehandev <sehandev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytorch-lightning = "^1.7.7"
hydra-core = "^1.2.0"
wandb = "^0.13.3"
deepspeed = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
